--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: Home
       <img src="{{ post.image }}" alt="Imagine ilustrativă pentru articolul: {{ post.title }}"/>
     {% endif %}
 
-    {{ post.excerpt }}
+    {{ post.description }}
 
     <p><a href="{{ post.url }}">Read</a></p>
   </div>
